# meta_ai_generator

./: .gitignore  build.py  devx_llm_wrapper.py  env  env.custom  env.template  main.py  pyproject.toml  readme.md  spec.csv
generated_crews/my_auto_crew/: README.md  pyproject.toml
generated_crews/my_auto_crew/src/my_auto_crew/: crew.py  main.py
generated_crews/my_auto_crew/src/my_auto_crew/config/: agents.yaml  tasks.yaml
generated_crews/my_auto_crew2/: README.md  pyproject.toml
generated_crews/my_auto_crew2/src/my_auto_crew2/: crew.py  devx_llm_wrapper.py  main.py
generated_crews/my_auto_crew2/src/my_auto_crew2/config/: agents.yaml  tasks.yaml
