[project]
name = "my_auto_crew"
version = "0.1.0"
description = "my_auto_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai[tools]==1.14.7"
]

[project.scripts]
my_auto_crew = "my_auto_crew.main:run"
run_crew = "my_auto_crew.main:run"
train = "my_auto_crew.main:train"
replay = "my_auto_crew.main:replay"
test = "my_auto_crew.main:test"
run_with_trigger = "my_auto_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
