[project]
name = "my_auto_crew2"
version = "0.1.0"
description = "my_auto_crew2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7"
]

[project.scripts]
my_auto_crew2 = "my_auto_crew2.main:run"
run_crew = "my_auto_crew2.main:run"
train = "my_auto_crew2.main:train"
replay = "my_auto_crew2.main:replay"
test = "my_auto_crew2.main:test"
run_with_trigger = "my_auto_crew2.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
